# LargeVolumeVizualizer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  conanfile.py
extra/: CMakeLists.txt  blocked_integration.cc  histrogram.cc  histrogram16.cc  int16touint16.cc  integrate.h  ldexp.cc  naive_integration.cc  preintegrate.cc  render.h  sample.h  test_volume_generator.cc  timer.h
extra/dummy/: integrate.h  sample.h
extra/experiments/: CMakeLists.txt  blocks.cc  common.h  raw.cc  tree.cc  tree_real.cc  tree_reduced.cc
liblvf/: CMakeLists.txt  liblvfConfig.cmake
liblvf/integrators/: raw_slab.h  raw_slab_simd.h  tree_slab_layer.h  tree_slab_layer_simd.h  tree_slab_packlet.h
liblvf/interface/components/: blend_simd.h  glm_simd.h  mapped_file.h  ray_generator.h
liblvf/interface/components/ray/: ray_simd.h  traversal_octree.h  traversal_octree_packlet.h  traversal_octree_simd.h
liblvf/interface/integrators/: raw_slab.h  raw_slab_simd.h  tree_slab.h  tree_slab_layer.h  tree_slab_layer_dda.h  tree_slab_layer_simd.h  tree_slab_packlet.h  tree_slab_simd.h
liblvf/interface/raw_volume/: raw_volume.h  sampler.h  sampler_simd.h
liblvf/interface/ray/: intersection.h  ray.h  ray_simd.h  traversal_octree.h  traversal_octree_packlet.h  traversal_octree_simd.h  traversal_raster.h
liblvf/interface/renderers/: packlet.h  scalar.h  simd.h
liblvf/interface/transfer/: piecewise_linear.h  preintegrate_function.h
liblvf/interface/transfer/texture2D/: sampler.h  sampler_simd.h  texture2D.h
liblvf/interface/tree_volume/: processor.h  sampler.h  sampler_simd.h  tree_volume.h
liblvf/interface/utils/: blend.h  blend_simd.h  byteswap.h  endian.h  fast_div.h  fast_exp2.h  glm_simd.h  linear_interpolation.h  morton.h  scan_tree.h  simd.h
liblvf/raw_volume/: raw_volume.h  sampler_simd.h
liblvf/ray/: intersection_simd.h  ray_simd.h  traversal_octree.h  traversal_octree_packlet.h  traversal_raster.h
liblvf/renderers/: scalar.h
liblvf/transfer/texture2D/: sampler.h  sampler_simd.h  texture2D.h
liblvf/tree_volume/: tree_volume.h
liblvf/utils/: blend_simd.h  endian.h  fast_div.h  fast_exp2.h  mapped_file.h  ray_generator.h
src/: blocked_volume.h  byteswap.h  div_tests.cc  endian.h  fast_div.h  glfw.h  integrator.h  integrator_raster.h  integrator_simd.h  intersection.h  intersection_simd.h  linear_gradient.h  main.cc  mapped_file.h  morton.h  preintegrated_transfer_function.h  process.cc  process_volume.cc  raster_traversal.h  raw_volume.h  ray.h  ray_generator.h  ray_raster_traversal.h  ray_traversal.h  render_packlet.h  render_scalar.h  render_simd.h  renderer.h  sampler_1D.h  sampler_2D.h  simd.h  sort_three_values_test.cc  test_volume_generator.cc  tf1d.h  utils.h  vizualize.cc  vizualize_args.h  vizualize_raw.cc  window.h
src/integrators/: raw_slab.h  raw_slab_simd.h  tree_slab.h  tree_slab_layer.h  tree_slab_layer_dda.h  tree_slab_layer_simd.h  tree_slab_packlet.h  tree_slab_simd.h
src/raw_volume/: raw_volume.h  renderer.h  sampler.h  sampler_simd.h
src/ray/: intersection.h  intersection_simd.h  ray.h  ray_simd.h  traversal_octree.h  traversal_octree_packlet.h  traversal_octree_simd.h  traversal_raster.h
src/ray_traversal/: intersection.h  intersection_simd.h  octree_traversal.h  octree_traversal_packlet.h  octree_traversal_simd.h  raster_traversal.h
src/renderers/: packlet.h  raw_volume.h  scalar.h  simd.h  tree.h  tree_layer.h  tree_layer_dda.h  tree_layer_simd.h  tree_packlet.h  tree_simd.h
src/tree_volume/: blend_simd.h  integrator.h  integrator_raster.h  integrator_simd.h  ray_octree_traversal.h  ray_octree_traversal_packlet.h  ray_octree_traversal_simd.h  renderer.h  renderer_layer.h  renderer_layer_dda.h  renderer_layer_simd.h  renderer_packlet.h  renderer_simd.h  renderer_tree.h  renderer_tree_packlet.h  renderer_tree_simd.h  sampler.h  sampler_simd.h  tree_volume.h
src/utils/: blend_simd.h  distance.h  fast_div.h  linear_gradient.h  piecewise_linear.h  preintegrate_function.h  simd.h
src/utils/texture2D/: sampler.h  sampler_simd.h
test/: 12to8bit.cc  test_volume_generator.cc  traversal_test.cc
tools/: CMakeLists.txt  glfw.h  process.cc  tf1d.h  vizualize.cc  vizualize_raw.cc
utils/: 16to8bit.cc  CMakeLists.txt  int8touint8.cc  integrate.h  mapped_coherent.cc  random_sampling.cc  ray_integration.cc  render.h  sample.h  sort_three_values.cc  timer.h
